--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,18 @@
-html {
-  line-height: 1.618em;
+body {
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-weight: 300;
   color: #666;
-  font-size: 11.618px;
+  font-size: 10px;
+  line-height: 1.5;
 }
 @media (min-width: 600px) {
-  html {
-    font-size: calc( 11.618px + (17.618 - 11.618) * ((100vw - 600px) / (1000 - 600)) );
+  body {
+    font-size: calc( 10px + (16 - 10) * ((100vw - 600px) / (1000 - 600)) );
   }
 }
 @media (min-width: 1000px) {
-  html {
-    font-size: 17.618px;
+  body {
+    font-size: 16px;
   }
 }
 h1,
@@ -83,7 +83,7 @@ ol,
 ul,
 form,
 table {
-  margin-bottom: 1.618em;
+  margin-bottom: 1.5em;
 }
 h1,
 h2,
@@ -93,21 +93,21 @@ h5,
 h6 {
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-weight: 500;
-  line-height: 1.078666666666667em;
-  margin-bottom: 0.4045em;
   color: #111;
 }
 h1 {
-  font-size: 29.416px;
+  font-size: 10px;
 }
 @media (min-width: 600px) {
   h1 {
-    font-size: calc( 29.416px + (35.416 - 29.416) * ((100vw - 600px) / (1000 - 600)) );
+    font-size: calc( 10px + (35.416 - 10) * ((100vw - 600px) / (1000 - 600)) );
   }
 }
 @media (min-width: 1000px) {
   h1 {
     font-size: 35.416px;
+    line-height: 1.016489722159476em;
+    margin-bottom: 0.338829907386492em;
   }
 }
 h2 {
@@ -121,6 +121,8 @@ h2 {
 @media (min-width: 1000px) {
   h2 {
     font-size: 32.18px;
+    line-height: 1.118707271597265em;
+    margin-bottom: 0.372902423865755em;
   }
 }
 h3 {
@@ -134,6 +136,8 @@ h3 {
 @media (min-width: 1000px) {
   h3 {
     font-size: 28.944000000000003px;
+    line-height: 1.243781094527363em;
+    margin-bottom: 0.414593698175788em;
   }
 }
 h4 {
@@ -147,6 +151,8 @@ h4 {
 @media (min-width: 1000px) {
   h4 {
     font-size: 25.708px;
+    line-height: 1.400342305896997em;
+    margin-bottom: 0.466780768632332em;
   }
 }
 h5 {
@@ -160,6 +166,8 @@ h5 {
 @media (min-width: 1000px) {
   h5 {
     font-size: 22.472px;
+    line-height: 1.601993592025632em;
+    margin-bottom: 0.533997864008544em;
   }
 }
 h6 {
@@ -173,11 +181,13 @@ h6 {
 @media (min-width: 1000px) {
   h6 {
     font-size: 19.236px;
+    line-height: 1.871490954460386em;
+    margin-bottom: 0.623830318153462em;
   }
 }
 blockquote {
   font-style: italic;
-  padding-left: 1.618em;
+  padding-left: 1.5em;
   border-left: 5px solid #ededed;
 }
 blockquote cite {
@@ -185,9 +195,9 @@ blockquote cite {
   font-style: normal;
 }
 pre {
-  padding: 0.4045em;
+  padding: 0.75em;
   background: #fafafa;
-  border: 1px solid #ededed;
+  line-height: 1.5em;
 }
 pre code {
   background: none;
@@ -196,9 +206,14 @@ pre code {
 }
 code {
   font-family: 'Courier New', Courier, 'Lucida Sans Typewriter', 'Lucida Typewriter', monospace;
-  padding: 0.0809em 0.2427em;
+  padding: 0.075em 0.225em;
   background: #fafafa;
-  border: 1px solid #ededed;
+  line-height: 0;
+}
+big,
+sup,
+sub {
+  line-height: 0;
 }
 abbr,
 acronym {
@@ -212,24 +227,19 @@ dt {
   color: #111;
   font-weight: bold;
 }
-dd {
-  margin-bottom: 0.4045em;
-}
 ul {
   padding-left: 1.1em;
-}
-ul li {
-  margin-bottom: 0.4045em;
 }
 ol {
   padding-left: 1.4em;
 }
-ol li {
-  margin-bottom: 0.4045em;
-}
 fieldset {
-  padding: 0.809em;
+  padding: 0 0.5em 0.5em;
   border: 1px solid #ededed;
+}
+fieldset input[type="text"]:last-child,
+fieldset textarea:last-child {
+  margin-bottom: 0;
 }
 legend {
   color: #111;
@@ -237,12 +247,16 @@ legend {
 }
 label {
   display: block;
-  margin-bottom: 0.809em;
+  margin-bottom: 0.375em;
 }
 input[type="text"],
 textarea {
-  padding: 0.809em;
+  padding: 0.75em;
   border: 1px solid #ededed;
+  margin-bottom: 1em;
+}
+textarea {
+  display: block;
 }
 table {
   width: 100%;
@@ -250,7 +264,7 @@ table {
   border-collapse: collapse;
 }
 th {
-  padding: 0.809em;
+  padding: 0.375em;
   text-align: left;
   color: #111;
   border: 1px solid #ededed;
@@ -259,11 +273,13 @@ tr:nth-child(odd) td {
   background: #f7f7f7;
 }
 td {
-  padding: 0.809em;
+  padding: 0.375em;
   border: 1px solid #ededed;
 }
+* {
+  box-sizing: border-box;
+}
 html {
-  padding: 3rem;
   text-align: center;
 }
 @media (max-width: 800px) {
@@ -273,10 +289,17 @@ html {
 }
 .logo {
   margin-bottom: 3rem;
-  display: block;
+  display: inline-block;
+  display: none;
 }
 .wrap {
   max-width: 980px;
   margin: auto;
   text-align: left;
+}
+body {
+  background: linear-gradient(to top, rgba(0,0,0,0.1) 5%, #fff 5%);
+  background-size: 100% 1.5em;
+  background-position: 0 -0.375em;
+  margin: 0;
 }
