--- a/typographic.styl
+++ b/typographic.styl
@@ -4,7 +4,7 @@
 // Settings
 
 $ratio              = $golden
-$line-height-ratio  = $golden
+$line-height-ratio  = $perfect-fifth
 $body-font          = $helvetica
 $body-font-weight   = 300
 $body-color         = #666
@@ -74,18 +74,42 @@ $palatino      = Palatino, 'Palatino Linotype', 'Palatino LT STD', "Book Antiqua
 
 // Functionality
 
-html
+px(amount, ignore-base = false)
+  if unit(amount) == "%"
+    amount = percent(base-font-size, ignore-base) / percent(base-font-size, true) * (amount / 100) * 16
+  else if unit(amount) == "em" or unit(amount) == "rem"
+    amount = em(base-font-size, ignore-base) / em(base-font-size, true) * amount * 16
+  else if unit(amount) == "pt"
+    amount = pt(base-font-size, ignore-base) / pt(base-font-size, true) * (amount / 14) * 16
+  else if unit(amount) == "px" or unit(amount) == ""
+    if (unit(base-font-size) != "px") && !ignore-base
+      amount = px(base-font-size, true) / 16 * amount
+    else if !ignore-base
+      amount = base-font-size / 16 * amount
+  unit(amount, "px")
 
-  $min-font = $min-font + $ratio
-  $max-font = $max-font + $ratio
+em(amount, ignore-base = false)
+  if unit(amount) == "%"
+    amount = percent(base-font-size, ignore-base) / percent(base-font-size, true) * (amount / 100)
+  else if unit(amount) == "px"
+    amount = px(base-font-size, ignore-base) / px(base-font-size, true) * (amount / 16)
+  else if unit(amount) == "pt"
+    amount = pt(base-font-size, ignore-base) / pt(base-font-size, true) * (amount / 14)
+  else if unit(amount) == "em" or unit(amount) == "rem" or unit(amount) == ""
+    if (unit(base-font-size) != "em") && !ignore-base
+      amount = em(base-font-size, true) * amount
+    else if !ignore-base
+      amount = base-font-size * amount
+  unit(amount, "em")
 
-  line-height: ($line-height-ratio)em
+body
 
   font-family: $body-font
   font-weight: $body-font-weight
   color: $body-color
 
   font-size: $min-font
+  line-height: $line-height-ratio
 
   @media (min-width: $min-width)
     font-size: s('calc( %s + (%s - %s) * ((100vw - %s) / (%s - %s)) )', $min-font, remove-unit($max-font), remove-unit($min-font), $min-width, remove-unit($max-width), remove-unit($min-width))
@@ -118,12 +142,9 @@ table
 h1, h2, h3, h4, h5, h6
   font-family: $header-font
   font-weight: $header-font-weight
-  line-height: ($line-height-ratio / 1.5)em
-  margin-bottom: ($line-height-ratio * .25)em
   color: $header-color
 
 h1
-  $min-font = $min-font + $ratio * 12
   $max-font = $max-font + $ratio * 12
 
   font-size: $min-font
@@ -133,6 +154,8 @@ h1
 
   @media (min-width: $max-width)
     font-size: $max-font
+    line-height: ((remove-unit(px(($line-height-ratio)em)) / remove-unit($max-font)) * 1.5)em
+    margin-bottom: ((remove-unit(px(($line-height-ratio)em)) / remove-unit($max-font)) * .5)em
 
 h2
   $min-font = $min-font + $ratio * 10
@@ -145,6 +168,8 @@ h2
 
   @media (min-width: $max-width)
     font-size: $max-font
+    line-height: ((remove-unit(px(($line-height-ratio)em)) / remove-unit($max-font)) * 1.5)em
+    margin-bottom: ((remove-unit(px(($line-height-ratio)em)) / remove-unit($max-font)) * .5)em
 
 h3
   $min-font = $min-font + $ratio * 8
@@ -157,6 +182,8 @@ h3
 
   @media (min-width: $max-width)
     font-size: $max-font
+    line-height: ((remove-unit(px(($line-height-ratio)em)) / remove-unit($max-font)) * 1.5)em
+    margin-bottom: ((remove-unit(px(($line-height-ratio)em)) / remove-unit($max-font)) * .5)em
 
 h4
   $min-font = $min-font + $ratio * 6
@@ -169,6 +196,8 @@ h4
 
   @media (min-width: $max-width)
     font-size: $max-font
+    line-height: ((remove-unit(px(($line-height-ratio)em)) / remove-unit($max-font)) * 1.5)em
+    margin-bottom: ((remove-unit(px(($line-height-ratio)em)) / remove-unit($max-font)) * .5)em
 
 h5
   $min-font = $min-font + $ratio * 4
@@ -181,6 +210,8 @@ h5
 
   @media (min-width: $max-width)
     font-size: $max-font
+    line-height: ((remove-unit(px(($line-height-ratio)em)) / remove-unit($max-font)) * 1.5)em
+    margin-bottom: ((remove-unit(px(($line-height-ratio)em)) / remove-unit($max-font)) * .5)em
 
 h6
   $min-font = $min-font + $ratio * 2
@@ -193,6 +224,8 @@ h6
 
   @media (min-width: $max-width)
     font-size: $max-font
+    line-height: ((remove-unit(px(($line-height-ratio)em)) / remove-unit($max-font)) * 1.5)em
+    margin-bottom: ((remove-unit(px(($line-height-ratio)em)) / remove-unit($max-font)) * .5)em
 
 blockquote
   font-style: italic
@@ -203,9 +236,9 @@ blockquote
     font-style: normal
 
 pre
-  padding: ($line-height-ratio * .25)em
+  padding: ($line-height-ratio * .5)em
   background: darken(white, 2%)
-  border: 1px solid darken(white, 7%)
+  line-height: ((remove-unit(px(($line-height-ratio)em)) / remove-unit($max-font)) * 1)em
   code
     background: none
     padding: 0
@@ -215,7 +248,10 @@ code
   font-family: $courier
   padding: ($line-height-ratio * .05)em ($line-height-ratio * .15)em
   background: darken(white, 2%)
-  border: 1px solid darken(white, 7%)
+  line-height: 0
+
+big, sup, sub
+  line-height: 0
 
 abbr, acronym
   border-bottom: 1px dotted #333
@@ -228,22 +264,18 @@ dt
   color: $header-color
   font-weight: bold
 
-dd
-  margin-bottom: ($line-height-ratio * .25)em
-
 ul
   padding-left: 1.1em
-  li
-    margin-bottom: ($line-height-ratio * .25)em
 
 ol
   padding-left: 1.4em
-  li
-    margin-bottom: ($line-height-ratio * .25)em
 
 fieldset
-  padding: ($line-height-ratio * .5)em
+  padding: 0 .5em .5em
   border: 1px solid darken(white, 7%)
+  input[type="text"], textarea
+    &:last-child
+      margin-bottom: 0
 
 legend
   color: $header-color
@@ -251,11 +283,15 @@ legend
 
 label
   display: block
-  margin-bottom: ($line-height-ratio * .5)em
+  margin-bottom: ($line-height-ratio * .25)em
 
 input[type="text"], textarea
   padding: ($line-height-ratio * .5)em
   border: 1px solid darken(white, 7%)
+  margin-bottom: 1em
+
+textarea
+  display: block
 
 table
   width: 100%
@@ -263,7 +299,7 @@ table
   border-collapse: collapse
 
 th
-  padding: ($line-height-ratio * .5)em
+  padding: ($line-height-ratio * .25)em
   text-align: left
   color: $header-color
   border: 1px solid darken(white, 7%)
@@ -274,5 +310,5 @@ tr
       background: darken(white, 3%)
 
 td
-  padding: ($line-height-ratio * .5)em
+  padding: ($line-height-ratio * .25)em
   border: 1px solid darken(white, 7%)
